--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,102 +1,34 @@
 en:
-  application_helper:
-    book_framgia: "Book FRAMGIA"
-
-  static_pages:
-    home:
-      title1: "Book FRAMGIA"
-      home: "Home"
-    help:
-      title2: "Help User"
-      help: "Help"
-    about:
-      about: "About"
-      book_app: "| BOOK APP"
-    contact:
-      contact: "Contact"
-      book_app: "| BOOK APP"
-
-  details:
-    info:
-      author: "Author: "
-      andrew: "Andrew Matthews"
-      category: "Category: "
-      tamly: "Tam ly - Ky nang song"
-      name1: "[HAN-OE9-R]Nguyen Thanh Cong"
-      branch: "Branch of book: "
-      office: "HANDICO OFFICE"
-      activities: "Activities"
-      rating: "Rating"
-      read: "Read"
-      waiting: "Waiting"
-      viewed: "Viewed"
-      description: "Description"
-      title: "Happiness Now"
-      status: "Status"
-      shared_by: "Shared by: "
-
   layouts:
-    menu:
-      title: "BOOK FRAMGIA"
+    header:
+      books: "Books"
       home: "Home"
       help: "Help"
-      login: "Log In"
-      signup: "Sign Up"
+      login: "Log in"
+      signup: "Sign up"
       logout: "Log out"
       profile: "Profile"
       setting: "Settings"
       users: "Users"
       account: "Account"
+      category: "Category"
       manager: "Manager"
-      manage_user: "Manage Users"
-      manage_category: "Manage Categories"
-      manage_authors: "Manage Author"
-    slogan:
-      slogan: "Welcome to Book FRAMGIA"
-    content:
-    search_book:
-      search_book: "Search Book"
-      more: More
-    Top_follow_book:
-      rank: "Top Follow BOOK"
-      name1: "[HAN-OE9-R]Nguyen Thanh Cong"
-      handico_office: "Handico Office"
-      shared_by: "Shared By"
-    book_update:
-      book_update: "New Update Books"
-      more: More
-      handico_office: "Handico Office"
-      shared_by: "Shared By"
-    book_viewed:
-      book_view: "Top Viewed Books"
-      more: More
-      handico_office: "Handico Office"
-      shared_by: "Shared By"
-    book_read:
-      book_read: "Top Read Books"
-      more: More
-      handico_office: "Handico Office"
-      shared_by: "Shared By"
-    book_rating:
-      more: More
-      book_rating: "Top Rating Books"
-      handico_office: "Handico Office"
-      shared_by: "Shared By"
-    book_waiting:
-      more: More
-      book_waiting: "Top Waiting Books"
-      handico_office: "Handico Office"
-      shared_by: "Shared by :"
+    application:
+      base_title: "Book Review"
     footer:
       about: "About"
       guide: "User Guide"
       feedback: "Feedback"
       contact: "Contact Us"
-      address: "13F Keangnam Landmark 72 Tower, Plot E6, Pham Hung Road, Nam Tu Liem, Ha Noi, Viet Nam."
-      email: "education@framgia.com"
       phone: "84-4-3795-5417"
+      email: "education@framgia.com"
+      address: "13F Keangnam Landmark 72 Tower, Plot E6, Pham Hung Road,
+        Nam Tu Liem, Ha Noi, Viet Nam."
       social: "Social"
+    slogan:
+      slogan: "Welcome to our book library"
     admin:
+      base_title: "Book Reviews"
       navigation: "Navigation"
       back_home: "Back home"
       manage_users: "Manage Users"
@@ -104,11 +36,25 @@ en:
       manage_categories: "Manage Categories"
       manage_books: "Manage Books"
       manage_feedbacks: "Manage Feedbacks"
-
+      base_title: "Book Review"
+  static_pages:
+    home:
+      home: "Home"
+      title: "Books"
+    help:
+      help: "Help"
+      title: "Help User"
+    about:
+      about: "About"
+    contact:
+      contact: "Contact"
   shared:
     error_messages:
       form_contain: "The form contains "
       error: "error"
+    show_new_update_book:
+      new_update_book: "New Update Books"
+      more: "More"
   users:
     new:
       signup: "Sign up"
@@ -122,6 +68,10 @@ en:
       check_email_link: "Please check your email to activate your account."
     show:
       not_found: "The user didn't found"
+      developer: "Developer"
+      follow: "Follow"
+      account_settings: "Account Settings"
+      request: "Request"
     edit:
       edit_user: "Edit user"
       save_changes: "Save changes"
@@ -152,7 +102,8 @@ en:
       forgot_password: "(Forgot password)"
     create:
       invalid_combination: "Invalid email/password combination"
-      account_not_activated_check_email_link: "Account not activated. Check your email for the activation link."
+      account_not_activated_check_email_link: "Account not activated.
+        Check your email for the activation link."
       invalid_combination: "Invalid email/password combination"
   user_mailer:
     account_activation:
@@ -167,6 +118,9 @@ en:
       hi: "Hi"
       link_expire: "This link will expire in two hours."
       click_link: "To reset your password click the link below:"
+  mailers:
+    user_mailer:
+      account_activation: "Account activation"
   account_activations:
     edit:
       not_found: "Not found"
@@ -329,28 +283,6 @@ en:
         back: "Back to Manager page"
         delete: "Delete"
         you_sure: "You definitely want to delete!!!"
-        add: "ADD"
-      update:
-        book_updated: "Book updated"
-    feedbacks:
-      index:
-        managefeedback: "Manage Feedbacks"
-      feedback:
-        name_user: "Name user"
-        content: "Content"
-      list_feedback:
-        delete: "Delete"
-        view: "View"
-        you_sure: "You definitely want to delete!!!"
-      destroy:
-        feedback_deleted: "Feedbacks deleted"
-      show:
-        view_feedback: "View Feedback"
-        name_user: "Name user: "
-        content: "Content: "
-        back: "Back to Manager page"
-        delete: "Delete"
-        you_sure: "You definitely want to delete!!!"
     reviews:
       index:
         manage_review: "Manage Reviews"
@@ -375,4 +307,80 @@ en:
         content: "Content review:"
         delete: "Delete"
         back: "Back to Manager page"
+  books:
+    index:
+      all_books: "All Books"
+    book:
+      rating: "Rating"
+      read: "Read"
+      waiting: "Waiting"
+      viewed: "Viewed"
+      description: "Description"
+      number_of_page: "Number of page: "
+      category_name: "Category Name: "
+    show:
+      title: "Books"
+      author: "Author: "
+      category: "Category: "
+      status: "Status"
+      description: "Description"
+      reviews: "Reviews"
+      not_found: "Not found"
+  reviews:
+    form:
+      please_enter_review: "Please enter your review here..."
+      review: "Review"
+      your_review: "Your Review"
+    review:
+      edit: "Edit"
+      destroy: "Destroy"
+      you_sure: "You sure?"
+      update: "Update your review"
+      your_review: "Your review"
+      please_enter_review: "Please enter your review here..."
+      reply: "Reply"
+      like: "Like"
+      save_changes: "Save changes"
+      not_found: "Not found"
+    create:
+      success: "Success"
+      error: "Error"
+      not_found: "Not found"
+      login_request: "Please login"
+    destroy:
+      deleted: "Deleted your review"
+      delete_failed: "Delete failed"
+      not_found: "Not found"
+      unauthorized: "Unauthorized"
+    update:
+      update_failed: "Update failed"
+      updated: "Updated"
+      unauthorized: "Unauthorized"
+    show:
+      not_found: "Not found"
+      delete_fail: "Delete fail"
+      unauthorized: "Unauthorized"
+  mailers:
+    user_mailer:
+      account_activation: "Account activation"
+  comments:
+    create:
+      success: "Comment was successfully created."
+      create_failed: "Create failed"
+      not_found: "Not found"
+      login_request: "Please login"
+      unauthorized: "Unauthorized"
+    update:
+      updated: "Comment was successfully updated."
+      update_failed: "Update failed"
+      unauthorized: "Unauthorized"
+      not_found: "Not found"
+    destroy:
+      success: "Comment was successfully destroyed."
+      delete_failed: "Delete failed"
+      unauthorized: "Unauthorized"
+      not_found: "Not found"
+    show:
+      not_found: "Not found"
+      unauthorized: "Unauthorized"
 
