--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -412,3 +412,22 @@ en:
     show_new_update_book:
       new_update_book: "New Update Books"
       more: "More"
+
+  marks:
+    form:
+      title_status: "Status:"
+      returned: "Returned"
+      reading: "Reading"
+      waiting: "Waiting"
+      mark: "Mark"
+    create:
+      success: "Mark Status Success"
+      error: "Mark Error"
+      not_found: "Not Found"
+    update:
+      updated: "Update Status Success"
+      update_failed: "Update Status Failed"
+    load_mark:
+      not_found: "Not Found"
+    load_in_user:
+      login_request: "Login Success" 
